--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,59 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family:  "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+}
+
+h1{
+  position:relative;
+  top: -100px;
+  padding:none;
+  margin:none;
+}
+
+button {
+  float: left;
+  size: 16px;
+  padding: 10px;
+  color: Black;
+  background: #fff;
+  font-weight: bold;
+  border-width: 1px;
+  border-color: rgba(0,0,0,0.12);
+  border-radius: 4px;
+  border-style: solid;
+  width:150px;
+  height: 100px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 2px;
+}
+
+button:hover{
+  color: rgb(56,132,255);
+  border-color: rgb(56,132,255);
+  outline: none;
+}
+
+button svg {
+    width: 25px;
+   height: 25px;
+}
+
+#fadeInText{
+  -webkit-animation: 1s ease 0s normal forwards 1 fadein;
+  animation: 1s ease 0s normal forwards 1 fadein;
+}
+
+@keyframes fadein{
+  0% { opacity:0; }
+  66% { opacity:0; }
+  100% { opacity:1; }
+}
+
+@-webkit-keyframes fadein{
+  0% { opacity:0; }
+  66% { opacity:0; }
+  100% { opacity:1; }
 }
